--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --disable-host-check",
-    "start-no-reload": "ng serve --live-reload false",
+    "start": "ng serve  --public-host=0.0.0.0/random12311_op/sockjs-node --host 0.0.0.0 --port 4200 --disable-host-check --host 0.0.0.0 --disable-host-check",
+    "start-no-reload": "ng serve  --public-host=0.0.0.0/random12311_op/sockjs-node --host 0.0.0.0 --port 4200 --disable-host-check --live-reload false",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
